--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body style="background-color: black; margin: 0; overflow: hidden;">
         <canvas id="rustCanvas"></canvas>
+        <script type="module" src="index.js"></script>
     </body>
 </html>
